package campus.domain;
public enum Role { PROFESSOR, ADMIN, STAFF }
