package campus_poc.domain;
public enum ReservationStatus { PENDING, APPROVED, REJECTED }
