package campus_poc.eventing;
public enum DomainEventType {
    RESERVATION_REQUESTED, RESERVATION_APPROVED, RESERVATION_REJECTED
}
