package campus_poc.eventing;
public interface EventListener { void on(DomainEvent event); }
