@startuml
title Campus Reservations - Tall Layout (Enum Factories + Singletons)

top to bottom direction
skinparam linetype ortho
skinparam ranksep 34
skinparam nodesep 10
skinparam wrapWidth 84
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
hide empty members

'============================================================
' L1 - APPLICATION (Command + Bus [Singleton])
'============================================================
package "L1 - Application" as L1 {
  interface Command {
    +execute(service: ReservationService)
  }

  class CreateReservationCommand {
    -req: ReservationRequest
    -actor: User
    +CreateReservationCommand(req: ReservationRequest, actor: User)
    +execute(service: ReservationService)
  }

  class ApproveReservationCommand {
    -requestId: String
    -actor: User
    +ApproveReservationCommand(requestId: String, actor: User)
    +execute(service: ReservationService)
  }

  class CommandBus <<Singleton>> {
    -service: ReservationService
    {static} getInstance(service: ReservationService) : CommandBus
    +dispatch(cmd: Command)
  }

  Command <|.. CreateReservationCommand
  Command <|.. ApproveReservationCommand
  CommandBus --> ReservationService : uses

  Command -[hidden]down- CreateReservationCommand
  CreateReservationCommand -[hidden]down- ApproveReservationCommand
  ApproveReservationCommand -[hidden]down- CommandBus
}

'============================================================
' L2 - SERVICES (Reservation + Scheduling)
'============================================================
package "L2 - Services" as L2 {
  class ReservationService {
    -db: DatabaseConnection
    -eventBus: EventBus
    -validators: ValidationHandler
    -scheduling: SchedulingService
    -policy: FacultyPolicy
    +ReservationService(db: DatabaseConnection, eventBus: EventBus, scheduling: SchedulingService, policy: FacultyPolicy)
    +submit(req: ReservationRequest, actor: User) : ValidationResult
    +approve(requestId: String, actor: User)
  }

  class SchedulingService {
    -strategy: SlotSelectionStrategy
    +SchedulingService(strategy: SlotSelectionStrategy, rooms: List)
    +suggest(req: ReservationRequest) : Room
    +available(roomId: String, slot: TimeSlot) : boolean
    +block(roomId: String, slot: TimeSlot)
  }

  ReservationService --> DatabaseConnection
  ReservationService --> EventBus
  ReservationService --> SchedulingService
  ReservationService --> FacultyPolicy

  ReservationService -[hidden]down- SchedulingService
}

'============================================================
' L3 - VALIDATION (Chain of Responsibility)
'============================================================
package "L3 - Validation (CoR)" as L3 {
  class ValidationResult {
    -ok: boolean
    -msg: String
    -chosen: Room
    +ok() : ValidationResult
    +ok(room: Room) : ValidationResult
    +fail(msg: String) : ValidationResult
  }

  abstract class ValidationHandler {
    -next: ValidationHandler
    +then(next: ValidationHandler) : ValidationHandler
    +validate(req: ReservationRequest, actor: User) : ValidationResult
    #check(req: ReservationRequest, actor: User) : ValidationResult
  }

  class FacultyPolicyValidator {
    -policy: FacultyPolicy
    +FacultyPolicyValidator(policy: FacultyPolicy)
    #check(req: ReservationRequest, actor: User) : ValidationResult
  }

  class ScheduleConflictValidator {
    -scheduling: SchedulingService
    +ScheduleConflictValidator(scheduling: SchedulingService)
    #check(req: ReservationRequest, actor: User) : ValidationResult
  }

  ValidationHandler <|-- FacultyPolicyValidator
  ValidationHandler <|-- ScheduleConflictValidator
  ReservationService --> ValidationHandler : policy -> conflicts

  ValidationHandler -[hidden]down- FacultyPolicyValidator
  FacultyPolicyValidator -[hidden]down- ScheduleConflictValidator
  ScheduleConflictValidator -[hidden]down- ValidationResult
}

'============================================================
' L4 - STRATEGY (Slot Selection)
'============================================================
package "L4 - Strategy" as L4 {
  interface SlotSelectionStrategy {
    +select(rooms: List, req: ReservationRequest) : Room
  }

  class LowestConflictStrategy {
    +select(rooms: List, req: ReservationRequest) : Room
  }

  SlotSelectionStrategy <|.. LowestConflictStrategy
  SchedulingService --> SlotSelectionStrategy

  SlotSelectionStrategy -[hidden]down- LowestConflictStrategy
}

'============================================================
' L5 - EVENTING (Observer + Enum Factory) [Singleton impls]
'============================================================
package "L5 - Eventing" as L5 {
  enum DomainEventType {
    RESERVATION_REQUESTED
    RESERVATION_APPROVED
    RESERVATION_REJECTED
  }

  class DomainEvent {
    -type: DomainEventType
    -aggregateId: String
    -payload: Object
    +DomainEvent(type: DomainEventType, aggregateId: String, payload: Object)
  }

  interface EventListener {
    +on(event: DomainEvent)
  }

  interface EventBus {
    +publish(event: DomainEvent)
    +subscribe(type: DomainEventType, listener: EventListener)
  }

  class InMemoryEventBus <<Singleton>> {
    -routes: Map
    {static} getInstance() : InMemoryEventBus
    +publish(event: DomainEvent)
    +subscribe(type: DomainEventType, listener: EventListener)
  }

  class MqttClient {
    +publish(topic: String, payload: String)
    +subscribe(topic: String, handler: Object)
  }

  class MqttEventBus <<Singleton>> {
    -client: MqttClient
    {static} getInstance(client: MqttClient) : MqttEventBus
    +publish(event: DomainEvent)
    +subscribe(type: DomainEventType, listener: EventListener)
  }

  enum EventBusKind {
    IN_MEMORY
    MQTT
  }

  class EventBusFactory {
    {static} create(kind: EventBusKind, client: MqttClient) : EventBus
  }

  EventBus <|.. InMemoryEventBus
  EventBus <|.. MqttEventBus
  MqttEventBus --> MqttClient
  EventBusFactory --> EventBus
  EventBusFactory --> EventBusKind
  EventBusFactory --> MqttClient

  DomainEventType -[hidden]down- DomainEvent
  DomainEvent -[hidden]down- EventListener
  EventListener -[hidden]down- EventBus
  EventBus -[hidden]down- InMemoryEventBus
  InMemoryEventBus -[hidden]down- MqttClient
  MqttClient -[hidden]down- MqttEventBus
  MqttEventBus -[hidden]down- EventBusKind
  EventBusKind -[hidden]down- EventBusFactory
}

'============================================================
' L6 - DOMAIN (Entities & Policy)
'============================================================
package "L6 - Domain" as L6 {
  enum ReservationStatus {
    PENDING
    APPROVED
    REJECTED
  }

  enum Role {
    PROFESSOR
    ADMIN
    STAFF
  }

  class ReservationRequest {
    -requestId: String
    -requesterId: String
    -roomId: String
    -slot: TimeSlot
    -attendees: int
    -equipment: List
    -status: ReservationStatus
  }

  class TimeSlot {
    -start: LocalDateTime
    -end: LocalDateTime
    +minutes() : long
  }

  class Room {
    -roomId: String
    -capacity: int
    -equipment: List
    +hasAll(items: List) : boolean
  }

  class User {
    -userId: String
    -role: Role
    -facultyKey: String
  }

  class FacultyPolicy {
    -facultyKey: String
    -maxMinutes: int
    -enforceBlackout: boolean
    -hardPref: boolean
    -allowedRoles: List
  }
}

'============================================================
' L7 - INFRASTRUCTURE (DB + Enum Factory) [Singleton impls]
'============================================================
package "L7 - Infrastructure" as L7 {
  interface DatabaseConnection {
    +save(req: ReservationRequest)
    +markApproved(id: String)
    +exists(id: String) : boolean
    +findById(id: String) : ReservationRequest
  }

  class InMemoryDatabaseConnection <<Singleton>> {
    -store: Map
    {static} getInstance() : InMemoryDatabaseConnection
    +save(req: ReservationRequest)
    +markApproved(id: String)
    +exists(id: String) : boolean
    +findById(id: String) : ReservationRequest
  }

  class SqlDatabaseConnection <<Singleton>> {
    -pool: Object
    {static} getInstance(pool: Object) : SqlDatabaseConnection
    +save(req: ReservationRequest)
    +markApproved(id: String)
    +exists(id: String) : boolean
    +findById(id: String) : ReservationRequest
  }

  enum DatabaseKind {
    IN_MEMORY
    SQL
  }

  class DatabaseFactory {
    {static} create(kind: DatabaseKind, pool: Object) : DatabaseConnection
  }

  DatabaseConnection <|.. InMemoryDatabaseConnection
  DatabaseConnection <|.. SqlDatabaseConnection
  DatabaseFactory --> DatabaseConnection
  DatabaseFactory --> DatabaseKind

  DatabaseConnection -[hidden]down- InMemoryDatabaseConnection
  InMemoryDatabaseConnection -[hidden]down- SqlDatabaseConnection
  SqlDatabaseConnection -[hidden]down- DatabaseKind
  DatabaseKind -[hidden]down- DatabaseFactory
}

'============================================================
' Cross-package relationships
'============================================================
CreateReservationCommand --> ReservationService : execute()
ApproveReservationCommand --> ReservationService : execute()
ReservationService --> DomainEvent
ReservationService --> ReservationRequest
ReservationService --> User
ReservationService --> Room
ReservationService --> TimeSlot
EventBus --> DomainEvent
EventBus --> EventListener
@enduml
